<resources>
    <string name="app_name">Onbeng Admin</string>
    <string name="exit">Exit</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="title_activity_form">Form</string>
    <string name="title_activity_pick">Pick</string>
    <string name="title_activity_login">Login</string>
    <string name="bengkel_name">Bengkel Name</string>
    <string name="bengkel_company">Bengkel Company</string>
    <string name="bengkel_contact">Bengkel Contact</string>
    <string name="bengkel_email">Bengkel Email</string>
    <string name="bengkel_location">Bengkel Location</string>
    <string name="bengkel_price">Price Per KM</string>
    <string name="bengkel_latlng">Bengkel Coordinate</string>
    <string name="bengkel_save">Save Now</string>
    <string name="pick_on">Pick Now</string>
    <string name="pick_off">Please waiting . . .</string>

    <string name="API_KEY">AIzaSyDupGnLls2KDaJYVWP6ykyexfl-ys7-Eik</string>
    <string name="delete">Delete</string>
</resources>
